--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "re-base": "^4.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-transition-group": "^2.5.0"
   },
