--- a/deploy/cloudbuild.yaml
+++ b/deploy/cloudbuild.yaml
@@ -16,18 +16,26 @@ steps:
   name: 'gcr.io/cloud-builders/npm'
   args: ['install']
 
-- id: "build static files"
+- id: "Build static files"
   name: 'gcr.io/cloud-builders/npm'
   args: ['run', 'build']
 
-- id: "Sync static files in bucket"
-  name: 'gcr.io/cloud-builders/gsutil'
-  args: ['-m', 'rsync', '-d', '-r', './build/', 'gs://website_chatbox-builded/']
-
-- id: "Download git repo for config App Engine"
+- id: "Download Express server"
   name: 'gcr.io/cloud-builders/git'
-  args: ['clone', 'https://source.developers.google.com/p/chatbox-236716/r/Config-App-Engine-Chatbox']
-  
-- id: "DEPLOY ON APP ENGINE"
+  args: ['clone', 'https://source.developers.google.com/p/chatbox-236716/r/github_yoanndelattre_express-server-gcp', './master/github_yoanndelattre_express-server-gcp']
+
+- id: "Create app_files folder"
+  name: 'ubuntu'
+  args: ['bash', './master/github_yoanndelattre_express-server-gcp/deploy/CreateFolderApp.sh']
+
+- id: "Move Website Chatbox Project folder"
+  name: 'gcr.io/cloud-builders/gsutil'
+  args: ['rsync', '-d', '-r', './build/.', './master/github_yoanndelattre_express-server-gcp/app_files/']
+
+- id: "Move WebsiteChatboxConfigAppEngine.yaml in github_yoanndelattre_express-server-gcp folder"
+  name: 'gcr.io/cloud-builders/gsutil'
+  args: ['mv', './deploy/WebsiteChatboxConfigAppEngine.yaml', './master/github_yoanndelattre_express-server-gcp/']
+
+- id: "DEPLOY APP ENGINE"
   name: 'gcr.io/cloud-builders/gcloud'
-  args: ['builds', 'submit', '--config', './Config-App-Engine-Chatbox/master/cloudbuildDeploy.yaml', './Config-App-Engine-Chatbox/']
+  args: ['app', 'deploy', './master/github_yoanndelattre_express-server-gcp/WebsiteChatboxConfigAppEngine.yaml', './deploy/dispatch.yaml', '--version=1']
