--- a/deploy/cloudbuild.yaml
+++ b/deploy/cloudbuild.yaml
@@ -22,16 +22,20 @@ steps:
 
 - id: "Download Express server"
   name: 'gcr.io/cloud-builders/git'
-  args: ['clone', 'https://source.developers.google.com/p/chatbox-236716/r/github_yoanndelattre_express-server-gcp', './express-server/github_yoanndelattre_express-server-gcp']
+  args: ['clone', 'https://source.developers.google.com/p/chatbox-236716/r/github_yoanndelattre_express-server-gcp', './master/github_yoanndelattre_express-server-gcp']
+
+- id: "Create app_files folder"
+  name: 'ubuntu'
+  args: ['bash', './master/github_yoanndelattre_express-server-gcp/deploy/CreateFolderApp.sh']
 
 - id: "Move Website Chatbox Project folder"
   name: 'gcr.io/cloud-builders/gsutil'
-  args: ['cp', '-r', './build/.', './express-server/github_yoanndelattre_express-server-gcp/app_files/']
+  args: ['rsync', '-d', '-r', './build/.', './master/github_yoanndelattre_express-server-gcp/app_files/']
 
 - id: "Move WebsiteChatboxConfigAppEngine.yaml in github_yoanndelattre_express-server-gcp folder"
   name: 'gcr.io/cloud-builders/gsutil'
-  args: ['mv', './deploy/WebsiteChatboxConfigAppEngine.yaml', './express-server/github_yoanndelattre_express-server-gcp/']
+  args: ['mv', './deploy/WebsiteChatboxConfigAppEngine.yaml', './master/github_yoanndelattre_express-server-gcp/']
 
 - id: "DEPLOY APP ENGINE"
   name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy', './express-server/github_yoanndelattre_express-server-gcp/WebsiteChatboxConfigAppEngine.yaml', './deploy/dispatch.yaml', '--version=1']
+  args: ['app', 'deploy', './master/github_yoanndelattre_express-server-gcp/WebsiteChatboxConfigAppEngine.yaml', './deploy/dispatch.yaml', '--version=1']
