--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "braces": "^2.3.1",
-    "querystringify": ">=2.0.0"
+    "braces": "^3.0.2",
+    "querystringify": "^2.1.1"
   }
 }
