--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,9 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
       - run:
+          name: create firebase config file
+          command: touch ./conf-firebase
+      - run:
           name: import firebase config
           command: echo $firebase_conf >> ./conf-firebase
       - run:
