--- a/deploy/cloudbuild.yaml
+++ b/deploy/cloudbuild.yaml
@@ -14,20 +14,16 @@ steps:
 
 - id: "Download Express server"
   name: 'gcr.io/cloud-builders/git'
-  args: ['clone', 'https://source.developers.google.com/p/chatbox-236716/r/github_yoanndelattre_express-server-gcp', './master/github_yoanndelattre_express-server-gcp']
-
-- id: "Create app_files folder"
-  name: 'ubuntu'
-  args: ['bash', './master/github_yoanndelattre_express-server-gcp/deploy/CreateFolderApp.sh']
+  args: ['clone', 'https://source.developers.google.com/p/chatbox-236716/r/github_yoanndelattre_express-server-gcp', './webserver_prod']
 
 - id: "Move Website Chatbox Project folder"
-  name: 'gcr.io/cloud-builders/gsutil'
-  args: ['rsync', '-d', '-r', './build/.', './master/github_yoanndelattre_express-server-gcp/app_files/']
+  name: 'alpine'
+  args: ['sh', '-c', 'cp -rf ./build/. ./webserver_prod/app_files/']
 
-- id: "Move WebsiteChatboxConfigAppEngine.yaml in github_yoanndelattre_express-server-gcp folder"
-  name: 'gcr.io/cloud-builders/gsutil'
-  args: ['mv', './deploy/WebsiteChatboxConfigAppEngine.yaml', './master/github_yoanndelattre_express-server-gcp/']
+- id: "Move WebsiteChatboxConfigAppEngine.yaml in webserver_prod folder"
+  name: 'alpine'
+  args: ['sh', '-c', 'mv ./deploy/WebsiteChatboxConfigAppEngine.yaml ./webserver_prod/']
 
 - id: "DEPLOY APP ENGINE"
   name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy', './master/github_yoanndelattre_express-server-gcp/WebsiteChatboxConfigAppEngine.yaml', './deploy/dispatch.yaml', '--version=1']
+  args: ['app', 'deploy', './webserver_prod/WebsiteChatboxConfigAppEngine.yaml', './deploy/dispatch.yaml', '--version=1']
