--- a/deploy/cloudbuild.yaml
+++ b/deploy/cloudbuild.yaml
@@ -1,5 +1,9 @@
 steps:
 
+- id: "Import Firebase config"
+  name: 'gcr.io/cloud-builders/gsutil'
+  args: ['cp', 'gs://chatbox_firebase_conf/conf-firebase.js', './src/']
+
 - id: "Pull app image"
   name: 'gcr.io/cloud-builders/docker'
   args: ['pull', 'gcr.io/chatbox-project-256619/chatbox:latest']
