--- a/deploy/cloudbuild.yaml
+++ b/deploy/cloudbuild.yaml
@@ -19,3 +19,5 @@ steps:
 - id: "Deploy new app image"
   name: 'gcr.io/cloud-builders/gcloud'
   args: ['run', 'deploy', 'chatbox', '--image=gcr.io/personal-website-269509/chatbox:latest', '--region=us-central1', '--allow-unauthenticated', '--concurrency=30', '--platform=managed', '--timeout=1m', '--max-instances=12', '--memory=256Mi']
+
+timeout: 300s
