--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "chatbox",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
   "dependencies": {
-    "firebase": "^7.18.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.19.1",
     "prop-types": "^15.7.2",
     "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-cookie-banner": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
