--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-cookie-banner": "^4.1.0",
     "react-dom": "^16.13.1",
+    "react-google-button": "^0.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1"
