--- a/deploy/cloudbuild.yaml
+++ b/deploy/cloudbuild.yaml
@@ -10,14 +10,14 @@ steps:
 
 - id: "Build app image"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/chatbox-287710/chatbox:latest', '.']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/chatbox:latest', '.']
 
 - id: "Push app image"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/chatbox-287710/chatbox:latest']
+  args: ['push', 'gcr.io/$PROJECT_ID/chatbox:latest']
 
 - id: "Deploy new app image"
   name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'chatbox', '--image=gcr.io/chatbox-287710/chatbox:latest', '--region=us-central1', '--allow-unauthenticated', '--concurrency=30', '--platform=managed', '--timeout=30s', '--max-instances=50', '--memory=256Mi', '--cpu=1']
+  args: ['run', 'deploy', 'chatbox', '--image=gcr.io/$PROJECT_ID/chatbox:latest', '--region=us-central1', '--allow-unauthenticated', '--concurrency=30', '--platform=managed', '--timeout=30s', '--max-instances=50', '--memory=256Mi', '--cpu=1']
 
 timeout: 300s
