--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,13 +24,8 @@
         "babel"
     ],
     "rules": {
-        "babel/new-cap": 1,
-        "babel/camelcase": 1,
-        "babel/no-invalid-this": 1,
-        "babel/object-curly-spacing": 1,
-        "babel/quotes": 1,
-        "babel/semi": 1,
-        "babel/no-unused-expressions": 1,
-        "babel/valid-typeof": 1
+        "require-jsdoc": 0,
+        "no-invalid-this": 0,
+        "babel/no-invalid-this": 1
     }
 }
