--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     "rules": {
         "require-jsdoc": 0,
         "no-invalid-this": 0,
+        "react/prop-types": 0,
         "babel/no-invalid-this": 1
     }
 }
